theme(fix): fix cx/cy classes and scrollbars

--- a/assets/scss/components/_alerts.scss
+++ b/assets/scss/components/_alerts.scss
@@ -10,8 +10,8 @@
 
   .icon--bs {
     svg {
-      width: 24px;
-      height: 24px;
+      @extend .cy-24;
+      @extend .cx-24;
       @extend .me-3;
     }
 
